2007-12-02  Darin Adler  <darin@apple.com>

        * Scripts/do-webcore-rename: More planned renaming.

2007-12-02  Sam Weinig  <sam@webkit.org>

        Rubber stamped by Anders.

        Use [NSURL absoluteString] instead of [NSURL description] in order to get
        more uniform results cross platform.

        * DumpRenderTree/mac/ResourceLoadDelegate.mm:
        (-[NSURL _drt_descriptionSuitableForTestResult]):

2007-12-02  Sam Weinig  <sam@webkit.org>

        Rubber stamped by Niko.

        Rename FrameLoaderDelegate.h/cpp to FrameLoadDelegate.h/cpp.

        * DumpRenderTree/win/DumpRenderTree.cpp:
        * DumpRenderTree/win/DumpRenderTree.vcproj:
        * DumpRenderTree/win/FrameLoadDelegate.cpp: Copied from DumpRenderTree/win/FrameLoaderDelegate.cpp.
        * DumpRenderTree/win/FrameLoadDelegate.h: Copied from DumpRenderTree/win/FrameLoaderDelegate.h.
        * DumpRenderTree/win/FrameLoaderDelegate.cpp: Removed.
        * DumpRenderTree/win/FrameLoaderDelegate.h: Removed.

2007-12-01  Alp Toker  <alp@atoker.com>

        Reviewed by Adam Roben.

        Make use of the newly introduced webkit.h convenience header.

        * GtkLauncher/main.c:

2007-12-01  Adam Treat  <treat@kde.org>

        Reviewed by Simon.

        * Check to see if the directory exists and exit if not.

        * DumpRenderTree/qt/main.cpp:
        (main):

2007-12-01  Adam Treat  <treat@kde.org>

        Reviewed by Simon.

        * Don't hide symbols when in Debug mode
        * On Linux (glibc) provide a backtrace in the test output for debugging purposes


        * DumpRenderTree/qt/main.cpp:
        (messageHandler):

2007-11-30  Alp Toker  <alp@atoker.com>

        Reviewed by Adam Roben.

        http://bugs.webkit.org/show_bug.cgi?id=15691
        [GTK] Public API does not follow GTK+ conventions

        Refactor the WebKit/GTK+ public API. Changes:
          WebKitPage -> WebKitWebView
          WebKitFrame -> WebKitWebFrame
